[ASHOK] Sprucing things up

--- a/Phase_3/web/templates/welcome.html
+++ b/Phase_3/web/templates/welcome.html
@@ -11,5 +11,8 @@
       <br>
       <p>Click <a href="/">here</a> to go home.</p>
     </div>
+    <div>
+      {{ query }}
+    </div>
   </body>
 </html>
