[AM] adding code for inventory age report and corresponding template

--- a/Phase_3/web/templates/display_inventory_age_table.html
+++ b/Phase_3/web/templates/display_inventory_age_table.html
@@ -6,11 +6,10 @@
   <table class="table table-striped">
   <thead>
     <tr>
-       <th scope="col">Customer ID</th>
-      <th scope="col">Customer Name</th>
-      <th scope="col">Vehicles Sold</th>
-      <th scope="col">Avg Purchase Price</th>
-      <th scope="col">Avg Number of Repairs</th>
+      <th scope="col">Vehicle Type</th>
+      <th scope="col">Minimum Age</th>
+      <th scope="col">Avg Age</th>
+      <th scope="col">Maximum Age</th>
     </tr>
   </thead>
   <tbody>
@@ -20,7 +19,6 @@
 	    <td>{{item[1]}}</td>
 	    <td>{{item[2]}}</td>
 	    <td>{{item[3]}}</td>
-      <td>{{item[4]}}</td>
 	</tr>
 	{% endfor %}
   </tbody>
