[AM] adding the remainder of reports

--- a/Phase_3/web/templates/display_monthly_sales_table.html
+++ b/Phase_3/web/templates/display_monthly_sales_table.html
@@ -2,14 +2,14 @@
 {% block content %}
 <!-- Page Content -->
 <div class="container">
-  <h1 class="mt-4">Inventory Age Report!</h1>
+  <h1 class="mt-4">Monthly Sales Report!</h1>
   <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Vehicle Type</th>
-      <th scope="col">Minimum Age</th>
-      <th scope="col">Avg Age</th>
-      <th scope="col">Maximum Age</th>
+      <th scope="col">Year Month</th>
+      <th scope="col">Number Of Vehicles</th>
+      <th scope="col">Sales Revenue</th>
+      <th scope="col">Net Income</th>
     </tr>
   </thead>
   <tbody>
