--- a/Phase_3/web/templates/display_seller_history_table.html
+++ b/Phase_3/web/templates/display_seller_history_table.html
@@ -6,14 +6,14 @@
   <table class="table table-striped">
   <thead>
     <tr>
-       <th scope="col">Customer ID</th>
+      <th scope="col">Customer ID</th>
       <th scope="col">Customer Name</th>
       <th scope="col">Vehicles Sold</th>
       <th scope="col">Avg Purchase Price</th>
       <th scope="col">Avg Number of Repairs</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="tby1">
 	{% for item in data %}
 	<tr>
 	    <td>{{item[0]}}</td>
@@ -25,5 +25,23 @@
 	{% endfor %}
   </tbody>
   </table>
+  <script type="text/javascript">
+   function color() {
+        var val = 0; //value to be compared with
+        var ColIndexToCheck=4;
+        var header = document.getElementById("tby1");
+        for (var j = 0; j < header.length; j++) {
+        if (header[j].innerHTML >= 5) 
+           ColIndexToCheck=j;
+        }
+
+          var trs= document.getElementById("tby1").getElementsByTagName("tr");
+            for (var i = 0; i < trs.length; i++) {
+                if (trs[i].cells[ColIndexToCheck].innerHTML > val) {
+                    trs[i].cells[ColIndexToCheck].style.backgroundColor = "red";
+                }
+            }
+        }
+  </script>
 </div>
 {% endblock %}
