--- a/Phase_3/web/templates/main.html
+++ b/Phase_3/web/templates/main.html
@@ -22,7 +22,7 @@
   </tbody>
   </table>
   <p>
-      <form action="" method="post">
+      <form action="/login" method="post">
         <input type="text" placeholder="Username" name="username" value="{{
           request.form.username }}">
          <input type="password" placeholder="Password" name="password" value="{{
