--- a/Phase_3/web/templates/main.html
+++ b/Phase_3/web/templates/main.html
@@ -3,32 +3,25 @@
 {% block content %}
 <!-- Page Content -->
 <div class="container">
-  <h1 class="mt-4">Search</h1>
-  <p>Burdell home page</p>
-  <table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">Number of cars available for purchase</th>
-
-    </tr>
-  </thead>
-  <tbody>
-    {% for item in vehicle_data %}
-    <tr>
-      <td>{{item[0]}}</td>
-
-    </tr>
-    {% endfor %}
-  </tbody>
-  </table>
+  <h1 class="mt-4">Burdell's Wramblin Wrecks</h1>
+  <p>Welcome {{ session.username }}!</p>
+  <p>TEST: {{ session }}!</p>
+  <p>Number of cars available for purchase: <b>{{ count_vehicles_available }}</b></p>
   <p>
-      <form action="/login" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{
-          request.form.username }}">
-         <input type="password" placeholder="Password" name="password" value="{{
-          request.form.password }}">
-        <input class="btn btn-default" type="submit" value="Login">
-      </form>
+    {% if not session.authenticated %}
+    <form action="/login" method="post">
+      <input type="text" placeholder="Username" name="username" value="{{
+        request.form.username }}">
+       <input type="password" placeholder="Password" name="password" value="{{
+        request.form.password }}">
+      <input class="btn btn-default" type="submit" value="Login">
+    </form>
+    {% endif %}
+    {% if session.authenticated %}
+    <form action="/logout" method="post">
+      <input class="btn btn-default" type="submit" value="Logout">
+    </form>
+    {% endif %}
   </p>
   <div class="collapse" id="collapseExample">
     <div class="card card-body">
@@ -59,5 +52,3 @@
   </div>
 </div>
 {% endblock %}
-
-
