--- a/Phase_3/web/templates/display_monthly_sales_table.html
+++ b/Phase_3/web/templates/display_monthly_sales_table.html
@@ -13,7 +13,7 @@
     </tr>
     {% for item in data %}
     <tr>
-      <td onclick="location.href= 'http://127.0.0.1:5000/report/monthlysalesdrilldown'"><a href="http://127.0.0.1:5000/report/monthlysalesdrilldown">{{item[0]}}</a></td>
+      <td onclick="location.href='/report/monthlysalesdrilldown/yearmonth={{item[0]}}'"><a href="http://127.0.0.1:5000/report/monthlysalesdrilldown/yearmonth={{item[0]}}">{{item[0]}}</a></td>
       <td>{{item[1]}}</td>
       <td>{{item[2]}}</td>
       <td>{{item[3]}}</td>
