[MARCO] corrected spelling error

--- a/Phase_3/web/templates/main.html
+++ b/Phase_3/web/templates/main.html
@@ -3,7 +3,7 @@
 {% block content %}
 <!-- Page Content -->
 <div class="container">
-  <h1 class="mt-4">Burdell's Wramblin Wrecks</h1>
+  <h1 class="mt-4">Burdell's Ramblin' Wrecks</h1>
   <p>Welcome {{ session.username }}!</p>
   <p>TEST: {{ session }}!</p>
   <p>Number of cars available for purchase: <b>{{ count_vehicles_available }}</b></p>
