--- a/Phase_3/web/templates/base.html
+++ b/Phase_3/web/templates/base.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <img src="/static/images/LogoSideways.png" alt="company_logo" height="100" width="300">
+      <img src="/static/images/LogoSideways.png" alt="company_logo" height="100" width="400">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,13 +23,18 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home
-            <span class="sr-only">(current)</span>
-          </a>
+          <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
         </li>
+        {% if not session.authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="#">Login</a>
         </li>
+        {% endif %}
+        {% if session.authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="#">Logout</a>
+        </li>
+        {% endif %}
         <li class="nav-item">
           <a class="nav-link" href="#">Vehicle Search</a>
         </li>
