--- a/Phase_3/web/templates/addindividual.html
+++ b/Phase_3/web/templates/addindividual.html
@@ -9,6 +9,7 @@
     <div class="form-group">
       
       {{ wtf.quick_form(form) }}
+      <input type=submit class='btn btn-primary btn-block'>
       
   </div>
 </form>
