[MARCO] added login welcome message

--- a/Phase_3/web/templates/base.html
+++ b/Phase_3/web/templates/base.html
@@ -55,7 +55,7 @@
         {% endif %}
         {% if session.authenticated %}
         <li class="nav-item">
-          <span class="nav-link"><span class="text-info">Welcome {{session.username}}!</span></span>
+          <span class="nav-link"><span class="text-white">Welcome {{session.username}}!</span></span>
         </li>
         {% endif %}
       </ul>
