[MARCO] reworked main page (and removed login/logout stuff)

--- a/Phase_3/web/templates/main.html
+++ b/Phase_3/web/templates/main.html
@@ -3,34 +3,27 @@
 {% block content %}
 <!-- Page Content -->
 <div class="container">
-  <h1 class="mt-4">Burdell's Ramblin' Wrecks</h1>
-  <p>Number of cars available for purchase: <b>{{ count_vehicles_available }}</b></p>
-  <div class="collapse" id="collapseExample">
-    <div class="card card-body">
-      <form action="/" method="POST">
-      <div class="form-group">
-        <label for="vehicle_type">Vehicle Type</label>
-        <input type="text" class="form-control" id="vehicle_type" aria-describedby="emailHelp" placeholder="vehicle_type">
-      </div>
-      <div class="form-group">
-        <label for="manufacturer_name">Manufacturer Name</label>
-        <input type="text" class="form-control" id="manufacturer_name" placeholder="manufacturer_name">
-      </div>
-      <div class="form-group">
-        <label for="color">Color</label> #need list of colors
-        <input type="text" class="form-control" id="color" placeholder="color">
-      </div>
-      <div class="form-group">
-        <label for="model_year">Model Year</label>#need model years here
-        <input type="text" class="form-control" id="model_year" placeholder="model_year">
-      </div>
-      <div class="form-group">
-        <label for="keyword">Keyword</label>
-        <input type="text" class="form-control" id="keyword" placeholder="keyword">
-      </div>
-      <button type="submit" class="btn btn-primary">Search</button>
-      </form>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Burdell's Ramblin' Wrecks</h1>
+      <p class="lead">
+        Number of cars available for purchase: <b><span class="badge badge-dark">{{ count_vehicles_available }}</span></b>
+      </p>
+      {% if session.authenticated %}
+      <h3>Search by VIN</h3> 
+      {% endif %}
     </div>
   </div>
+  "All Roles"
+  "Manager"
+  "Clerk"
+  "Sales Person" 
+  <!--More options appear on Search Page-->
+  <!--All authenticated Users see Search by VIN option-->
+  <!--if user.role == 'Inventory Clerk' OR 'Owner':-->
+  <!--  add Vehicle option appears-->
+  <!--  add Repair option appears-->
+  <!--if user.role == 'Manager' OR 'Owner':-->
+  <!--  Reports link appears on page-->
 </div>
 {% endblock %}
