--- a/Phase_3/web/templates/addbusiness.html
+++ b/Phase_3/web/templates/addbusiness.html
@@ -5,6 +5,7 @@
 
 <div class="container">
 <div class="card card-body">
+    <p>TEST: {{ session }}!</p>
 <form action="/addbusiness" method="POST">
     <div class="form-group">
       
