[MARCO] spruced up main template

--- a/Phase_3/web/templates/main.html
+++ b/Phase_3/web/templates/main.html
@@ -4,7 +4,7 @@
 <!-- Page Content -->
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Burdell's Ramblin' Wrecks</h1>
+    <h1 class="display-4">Welcome!</h1>
     <p class="lead">
       Number of cars available for purchase: <b><span class="badge badge-dark">{{ count_vehicles_available }}</span></b>
     </p>
